--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 </head>
 <body>
     <h1>Welcome to the Engineer's World</h1>
-    <a href="./public/about.html">About Developer</a><br>
-    <a href="./public/contact.html">Contact Developer</a><br>
-    <a href="./public/birthday-invite.html">This is invitation Of My Birthday</a>
+    <a href="./about.html">About Developer</a><br>
+    <img src="./aboutimg.png" alt="About ss"><br><br>
+    <a href="./contact.html">Contact Developer</a><br>
+    <img src="./contact.png" alt="Contact ss"><br><br>
+    <a href="./birthday-invite.html">This is invitation Of My Birthday</a><br>
+    <img src="./bday.png" alt="">
 </body>
 </html>
 
